--- a/templates/contactUs.html
+++ b/templates/contactUs.html
@@ -9,5 +9,57 @@
 {% endblock %}
 
 {% block body %}
+    <style>
+        input[type=text], select, textarea {
+            width: 100%;
+            padding: 12px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
+            margin-top: 6px;
+            margin-bottom: 16px;
+            resize: vertical;
+        }
 
+        input[type=submit] {
+            background-color: #4CAF50;
+            color: white;
+            padding: 12px 20px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+
+        input[type=submit]:hover {
+            background-color: #45a049;
+        }
+
+        .container {
+            border-radius: 5px;
+            background-color: #f2f2f2;
+            padding: 20px;
+        }
+    </style>
+
+    <fieldset>
+        <legend>Contact Form</legend>
+
+        <div class="container">
+          <form action="{{ url_for('insertComment') }}" method="post">
+            <label for="firstname">First Name</label>
+            <input type="text" name="firstname" placeholder="Your name..">
+
+            <label for="lastname">Last Name</label>
+            <input type="text" name="lastname" placeholder="Your last name..">
+
+            <label for="Location">Country</label>
+            <input type="text" name="Location" placeholder="Your Country..">
+
+            <label for="comment">Comment</label>
+            <textarea name="comment" placeholder="How do you feel about our services" style="height:200px"></textarea>
+
+            <input type="submit" value="Submit">
+          </form>
+        </div>
+    </fieldset>
 {% endblock %}
