--- a/templates/layout.html
+++ b/templates/layout.html
@@ -29,7 +29,9 @@
 			<span class="titleBar"> School Ranking System </span>
 			<span class="titleBarMenu">
 				<a href="/dashboard">Home</a>
-				<a href="/logout">Log Out</a>
+				<div class="tooltip"><a href="/logout">Log Out</a>
+					<span class="tooltiptext">Goodbye {{ name }}</span>
+				</div>
 			</span>
 		</div>
 		<!--Write Every Code Here-->
