--- a/templates/location/locationInsert.html
+++ b/templates/location/locationInsert.html
@@ -11,7 +11,7 @@
 {% block body %}
     <fieldset>
         <legend>Location Form</legend>
-        <form action="{{ url_for('locationInsert') }}" method="post">
+        <form action="{{ url_for('searchlocation') }}" method="post">
             School Registration Number:<br>
             <select name="SchRegNo">
                 <option value="NULL"></option>
