--- a/templates/results/result.html
+++ b/templates/results/result.html
@@ -10,12 +10,92 @@
 
 {% block body %}
 Select one option
-    <form action="{{ url_for('handleResult') }}" method="post">
-        <ul>
-            <li><input name="button" type="radio" value= "resultView">View</li>
-            <li><input name="button" type="radio" value= "resultInsert">Update</li>
-            <li><input name="button" type="radio" value= "resultDelete">Delete</li>
-        </ul>
-        <input type="submit" value="Submit"/>
-    </form>
+
+    {% if authority == "user" %}
+    <div class="row">
+        <div class="column" id="fadeIn">
+            <a href="/resultView">
+                <div class="card">
+                    <h1>View</h1>
+                    <ul>
+                    {% for i in result %}
+                        <li>{{ i.Sname }} from {{ i.Location }} Pass %: {{ i.PassPer }} Fail %: {{ i.FailPer }}</li>
+                    {% endfor %}
+                    </ul>
+                </div>
+            </a>
+        </div>
+    </div>
+
+    {% elif authority == "partial" %}
+    <div class="row">
+        <div class="column" id="fadeIn">
+            <a href="/resultView">
+                <div class="card">
+                    <h1>View</h1>
+                    <ul>
+                    {% for i in result %}
+                        <li>{{ i.Sname }} from {{ i.Location }} Pass %: {{ i.PassPer }} Fail %: {{ i.FailPer }}</li>
+                    {% endfor %}
+                    </ul>
+                </div>
+            </a>
+        </div>
+
+        <div class="column" id="fadeIn">
+            <a href="/resultInsert">
+                <div class="card">
+                    <h1>Insert</h1>
+                    <ul>
+                    {% for i in result %}
+                        <li>{{ i.Sname }} from {{ i.Location }} Pass %: {{ i.PassPer }} Fail %: {{ i.FailPer }}</li>
+                    {% endfor %}
+                    </ul>
+                </div>
+            </a>
+        </div>
+    </div>
+
+    {% elif authority == "admin" %}
+    <div class="row">
+        <div class="column" id="fadeIn">
+            <a href="/resultView">
+                <div class="card">
+                    <h1>View</h1>
+                    <ul>
+                    {% for i in result %}
+                        <li>{{ i.Sname }} from {{ i.Location }} Pass %: {{ i.PassPer }} Fail %: {{ i.FailPer }}</li>
+                    {% endfor %}
+                    </ul>
+                </div>
+            </a>
+        </div>
+
+        <div class="column" id="fadeIn">
+            <a href="/resultInsert">
+                <div class="card">
+                    <h1>Insert</h1>
+                    <ul>
+                    {% for i in result %}
+                        <li>{{ i.Sname }} from {{ i.Location }} Pass %: {{ i.PassPer }} Fail %: {{ i.FailPer }}</li>
+                    {% endfor %}
+                    </ul>
+                </div>
+            </a>
+        </div>
+
+        <div class="column" id="fadeIn">
+            <a href="/resultDelete">
+                <div class="card">
+                    <h1>Delete</h1>
+                    <ul>
+                    {% for i in result %}
+                        <li>{{ i.Sname }} from {{ i.Location }} Pass %: {{ i.PassPer }} Fail %: {{ i.FailPer }}</li>
+                    {% endfor %}
+                    </ul>
+                </div>
+            </a>
+        </div>
+    </div>
+    {% endif %}
 {% endblock %}
