--- a/templates/about.html
+++ b/templates/about.html
@@ -18,7 +18,7 @@
             <p class="title">Front-End Designer</p>
             <p>Front End, Python Server</p>
             <p>shahzaib.waseem96@gmail.com</p>
-            <p><button class="button">Contact</button></p>
+            <p><a href="mailto:shahzaib.waseem96@gmail.com"><button class="button">Contact</button></a></p>
           </div>
         </div>
       </div>
@@ -31,7 +31,7 @@
             <p class="title">Database Designer</p>
             <p>ERD, Database Schema, SQL Queries</p>
             <p>mijaz.bscs16seecs@seecs.edu.pk</p>
-            <p><button class="button">Contact</button></p>
+            <p><a href="mailto:mijaz.bscs16seecs@seecs.edu.pk"><button class="button">Contact</button></a></p>
           </div>
         </div>
       </div>
@@ -40,11 +40,11 @@
         <div class="card">
           <img src="{{ url_for('static', filename='img/pictures/Sanan.jpg') }}" alt="Sanan" width="300" height="300"/>
           <div class="container">
-            <h2>Sanan</h2>
-            <p class="title">Pizza BOi</p>
-            <p>I dyd absylutili dyd notang. ei am a rytrd. kill mi plx</p>
-            <p>sanan@gareeb.com</p>
-            <p><button class="button">Contact</button></p>
+            <h2>Sanan Yaqoob</h2>
+            <p class="title">Supervisor</p>
+            <p>Database Data Insertion, Front End Reviewer</p>
+            <p>sananyaqoob45@gmail.com</p>
+            <p><a href="mailto:sananyaqoob45@gmail.com"><button class="button">Contact</button></a></p>
           </div>
         </div>
       </div>
