--- a/templates/admission/admissionView.html
+++ b/templates/admission/admissionView.html
@@ -9,6 +9,7 @@
 {% endblock %}
 
 {% block body %}
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/search.css') }}" type="text/css" />
     <table style="width:100%">
         <tr>
             <th>School Number</th>
@@ -25,4 +26,10 @@
             </tr>
         {% endfor %}
     </table>
+
+    <form action="{{ url_for('rangeadmission') }}" method="post">
+        <input type="submit" value="Submit"/>
+        <input type="number" name="minimum" min=10000 step=1000 style="float:right" />
+        <input type="number" name="maximum" min=10000 step=1000 style="float:right" />
+    </form>
 {% endblock %}
