--- a/templates/fee/fee.html
+++ b/templates/fee/fee.html
@@ -10,12 +10,92 @@
 
 {% block body %}
 Select one option
-    <form action="{{ url_for('handleFee') }}" method="post">
-        <ul>
-            <li><input name="button" type="radio" value= "feeView">View</li>
-            <li><input name="button" type="radio" value= "feeInsert">Update</li>
-            <li><input name="button" type="radio" value= "feeDelete">Delete</li>
-        </ul>
-        <input type="submit" value="Submit"/>
-    </form>
+
+    {% if authority == "user" %}
+    <div class="row">
+        <div class="column" id="fadeIn">
+            <a href="/feeView">
+                <div class="card">
+                    <h1>View</h1>
+                    <ul>
+                    {% for i in fee %}
+                        <li>{{ i.Cname }} from {{ i.Sname }} - Fee: {{ i.TotalAmount }} ({{ i.FeeDate }})</li>
+                    {% endfor %}
+                    </ul>
+                </div>
+            </a>
+        </div>
+    </div>
+
+    {% elif authority == "partial" %}
+    <div class="row">
+        <div class="column" id="fadeIn">
+            <a href="/feeView">
+                <div class="card">
+                    <h1>View</h1>
+                    <ul>
+                    {% for i in fee %}
+                        <li>{{ i.Cname }} from {{ i.Sname }} - Fee: {{ i.TotalAmount }} ({{ i.FeeDate }})</li>
+                    {% endfor %}
+                    </ul>
+                </div>
+            </a>
+        </div>
+
+        <div class="column" id="fadeIn">
+            <a href="/feeInsert">
+                <div class="card">
+                    <h1>Insert</h1>
+                    <ul>
+                    {% for i in fee %}
+                        <li>{{ i.Cname }} from {{ i.Sname }} - Fee: {{ i.TotalAmount }} ({{ i.FeeDate }})</li>
+                    {% endfor %}
+                    </ul>
+                </div>
+            </a>
+        </div>
+    </div>
+
+    {% elif authority == "admin" %}
+    <div class="row">
+        <div class="column" id="fadeIn">
+            <a href="/feeView">
+                <div class="card">
+                    <h1>View</h1>
+                    <ul>
+                    {% for i in fee %}
+                        <li>{{ i.Cname }} from {{ i.Sname }} - Fee: {{ i.TotalAmount }} ({{ i.FeeDate }})</li>
+                    {% endfor %}
+                    </ul>
+                </div>
+            </a>
+        </div>
+
+        <div class="column" id="fadeIn">
+            <a href="/feeInsert">
+                <div class="card">
+                    <h1>Insert</h1>
+                    <ul>
+                    {% for i in fee %}
+                        <li>{{ i.Cname }} from {{ i.Sname }} - Fee: {{ i.TotalAmount }} ({{ i.FeeDate }})</li>
+                    {% endfor %}
+                    </ul>
+                </div>
+            </a>
+        </div>
+
+        <div class="column" id="fadeIn">
+            <a href="/feeDelete">
+                <div class="card">
+                    <h1>Delete</h1>
+                    <ul>
+                    {% for i in fee %}
+                        <li>{{ i.Cname }} from {{ i.Sname }} - Fee: {{ i.TotalAmount }} ({{ i.FeeDate }})</li>
+                    {% endfor %}
+                    </ul>
+                </div>
+            </a>
+        </div>
+    </div>
+    {% endif %}
 {% endblock %}
