--- a/templates/location/locationView.html
+++ b/templates/location/locationView.html
@@ -9,6 +9,11 @@
 {% endblock %}
 
 {% block body %}
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/search.css') }}" type="text/css" />
+    <form action= "{{ url_for('searchlocation') }}" method="post">
+            <input type="submit" value="Submit"/>
+            <input type="text" name="search" placeholder="Search Table.." />
+    </form>
     <table style="width:100%">
         <tr>
             <th>School Registration Number</th>
