--- a/templates/test/test.html
+++ b/templates/test/test.html
@@ -10,12 +10,92 @@
 
 {% block body %}
 Select one option
-    <form action="{{ url_for('handleTest') }}" method="post">
-        <ul>
-            <li><input name="button" type="radio" value= "testView">View</li>
-            <li><input name="button" type="radio" value= "testInsert">Update</li>
-            <li><input name="button" type="radio" value= "testDelete">Delete</li>
-        </ul>
-        <input type="submit" value="Submit"/>
-    </form>
+
+    {% if authority == "user" %}
+    <div class="row">
+        <div class="column" id="fadeIn">
+            <a href="/testView">
+                <div class="card">
+                    <h1>View</h1>
+                    <ul>
+                    {% for i in test %}
+                        <li>{{ i.Sname }} {{ i.Cname }} Date: {{ i.TestDate }} City: {{ i.Centre }}</li>
+                    {% endfor %}
+                    </ul>
+                </div>
+            </a>
+        </div>
+    </div>
+
+    {% elif authority == "partial" %}
+    <div class="row">
+        <div class="column" id="fadeIn">
+            <a href="/testView">
+                <div class="card">
+                    <h1>View</h1>
+                    <ul>
+                    {% for i in test %}
+                        <li>{{ i.Sname }} {{ i.Cname }} Date: {{ i.TestDate }} City: {{ i.Centre }}</li>
+                    {% endfor %}
+                    </ul>
+                </div>
+            </a>
+        </div>
+
+        <div class="column" id="fadeIn">
+            <a href="/testInsert">
+                <div class="card">
+                    <h1>Insert</h1>
+                    <ul>
+                    {% for i in test %}
+                        <li>{{ i.Sname }} {{ i.Cname }} Date: {{ i.TestDate }} City: {{ i.Centre }}</li>
+                    {% endfor %}
+                    </ul>
+                </div>
+            </a>
+        </div>
+    </div>
+
+    {% elif authority == "admin" %}
+    <div class="row">
+        <div class="column" id="fadeIn">
+            <a href="/testView">
+                <div class="card">
+                    <h1>View</h1>
+                    <ul>
+                    {% for i in test %}
+                        <li>{{ i.Sname }} {{ i.Cname }} Date: {{ i.TestDate }} City: {{ i.Centre }}</li>
+                    {% endfor %}
+                    </ul>
+                </div>
+            </a>
+        </div>
+
+        <div class="column" id="fadeIn">
+            <a href="/testInsert">
+                <div class="card">
+                    <h1>Insert</h1>
+                    <ul>
+                    {% for i in test %}
+                        <li>{{ i.Sname }} {{ i.Cname }} Date: {{ i.TestDate }} City: {{ i.Centre }}</li>
+                    {% endfor %}
+                    </ul>
+                </div>
+            </a>
+        </div>
+
+        <div class="column" id="fadeIn">
+            <a href="/testDelete">
+                <div class="card">
+                    <h1>Delete</h1>
+                    <ul>
+                    {% for i in test %}
+                        <li>{{ i.Sname }} {{ i.Cname }} Date: {{ i.TestDate }} City: {{ i.Centre }}</li>
+                    {% endfor %}
+                    </ul>
+                </div>
+            </a>
+        </div>
+    </div>
+    {% endif %}
 {% endblock %}
